# fixtr

./: .gitignore  CMakeLists.txt  Makefile  README.md  fixcore.cpp  fixcore.h  fixspec.cpp  fixtr.cpp  todo.txt
spec/: FIX50SP2.xml
test/: fix_buy_sell_001.fix  fix_buy_sell_002.fix  single.FIX44.D.fix  single.FIX44.E.fix  single.FIX50SP2.D.txt  test.fix  test00.fix  test00.fix42.fix  test01.fix
